# OOP-Class

./: .gitignore  .gitmodules  CMakeLists.txt  LibraryMenus.cpp  LibraryMenus.h  LibraryOperations.cpp  LibraryOperations.h  LibraryService.cpp  LibraryService.h  LibrarySystem.cpp  LibrarySystem.h  LibraryViews.cpp  LibraryViews.h  MenuRenderer.cpp  MenuRenderer.h  README.md  RentalRecord.h  main.cpp  prime.cpp  tempCodeRunnerFile
.github/workflows/: doc-sync-gate.yml
accounts/: Account.cpp  Account.h  Admin.cpp  Admin.h  User.cpp  User.h
data/: accounts.txt  inventory.txt  rental_records.txt
docs/: README.md  architecture.md  changelog.md  data-format-kv-v1.md  project-overview.md  security-authentication.md  testing-validation.md
finals_practice/: problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp
main.dSYM/Contents/Resources/DWARF/: main
media/: Book.cpp  Book.h  Dvd.cpp  Dvd.h  Magazine.cpp  Magazine.h  MediaItem.cpp  MediaItem.h
openspec/changes/2026-06-04-stl-data-format-hardening/: documentation-coverage-matrix.md
openspec/changes/archive/2026-05-28-interactive-menu-soft-delete/: design.md  tasks.md
openspec/changes/archive/2026-05-28-smart-media-rental-system/: design.md
openspec/changes/archive/2026-06-04-2026-06-04-stl-data-format-hardening/: design.md  dod-checklist.md  proposal.md
openspec/specs/account-management/: spec.md
openspec/specs/documentation-governance/: spec.md
openspec/specs/library-system-architecture/: spec.md
openspec/specs/media-rental-system/: spec.md
openspec/specs/recycle-bin-persistence/: spec.md
openspec/specs/rental-history-records/: spec.md
openspec/specs/stl-structured-persistence/: spec.md
openspec/zh-TW/: README.md
openspec/zh-TW/changes/2026-06-04-stl-data-format-hardening/: design.md  proposal.md  tasks.md
openspec/zh-TW/specs/account-management/: spec.md
openspec/zh-TW/specs/media-rental-system/: spec.md
playground/: main  main.cpp
scripts/: check-doc-sync.ps1  run-kv-tests.ps1
week1/: main.cpp
week10_11/: custom_exception.cpp  exception_handling.cpp  factorial.cpp  fstream.cpp  hanoi.cpp  lambda.cpp  map.cpp  serialization.cpp  templates.cpp
week2/: main  main.cpp  main_1.cpp  main_2.cpp  topics.txt
week3/: main  main.cpp  notes.txt
week4/: main  main.cpp
week5/: .gitignore  ArrayOperations  ArrayOperations.cpp  CppApp1  CppApp1.cpp  complex.cpp  main.cpp  prime.cpp  topics.txt  week5_notes.md
week6/: main2.cpp  main3.cpp  playground.cpp  playground2.cpp  playground3.cpp
week7/: Car.cpp  Car.h  carmain  carmain.cpp  employee_system  employee_system.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp  naming_convention  naming_convention.cpp  topics.txt  week7_recap  week7_recap.cpp
week8/: cat_dog  cat_dog.cpp  circle  circle.cpp  class.cpp  dummy_int.cpp  shape.cpp  vector  vector.cpp
(+26 files in other folders)
